Commit retro-220 emulator version 0.06: 1. Correct scaling and normalization limiter errors in floating Add/Subtract uncovered by BALGOL testing; set Single-Step instead of Stop if normalization limiter is exceeded. 2. Correct improper comparison of sign digits by CFA/CFR uncovered by BALGOL testing. 3. Change method of lamp glow update in Processor and ControlConsole to provide smoother, more realistic display. 4. Implement diagnostic trace facility in Processor; toggle on and off by double-clicking "220" logo on ControlConsole. 5. Implement temporary, experimental floatingAdd() routine in Processor that does rounding for use in BALGOL validity checking (the 220 did not round, and it is disabled in this commit). 6. Correct printer carriage control handling in CardatronOutput. 7. Improve timing for ConsolePrinter TTY "Whippet mode". 8. Implement compression of consecutive duplicate blocks in tape image files for MagTapeDrive -- see comments in source. 9. Remove inappropriate SPO selection from unit designate on PaperTapeReader panel.

--- a/webUI/B220ControlConsole.css
+++ b/webUI/B220ControlConsole.css
@@ -33,6 +33,9 @@
     font-size:          36px;
     font-weight:        bold}
 
+#B220Logo.tracing {
+    color:              red}
+
 #IntervalTimerResetCaption {
     left:               calc(50% - 206px);
     bottom:             20px;
